# destrobe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  enhanced_performance_summary.txt  pyproject.toml
destrobe/: __init__.py  cli.py
destrobe/core/: __init__.py  enhanced_filters.py  extreme_filters.py  filters.py  hyperextreme_filters.py  io.py  metrics.py  normalization.py  preview.py  simple_preview.py  ultra_filters.py
destrobe/utils/: __init__.py  fps.py  logging.py
examples/: README.md
tests/: __init__.py  synthetic_video.py  test_cli.py  test_filters.py  test_metrics.py
